[tool.poetry]
name = "progress-passthrough"
version = "0.1.0"
description = "Utilities to pass progress information through nesting levels"
authors = ["smheidrich <smheidrich@weltenfunktion.de>"]

[tool.poetry.dependencies]
python = "^3.9"
setuptools = "^61.1.1"
tqdm = {version = "^4.63.0", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^7.1.0"
pytest-cov = "^3.0.0"
sybil = "^3.0.1"
tqdm = "^4.63.0"
Sphinx = "^4.4.0"

[tool.poetry.extras]
tqdm = ["tqdm"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
